kube/charts/base/ci/rs-kyvernoClusterPolicies-result.yaml
---
# Source: base-test/templates/loader.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-release
  namespace: default
spec:
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (image): '*'
            imagePullPolicy: IfNotPresent
    name: set-image-pull-policy
